--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v*'
+  workflow_dispatch:
 
 jobs:
   build:
@@ -17,31 +18,41 @@ jobs:
       with:
         xcode-version: latest-stable
     
-    - name: Build
+    - name: Build Release
       run: |
         xcodebuild -project GrammarPolice.xcodeproj \
           -scheme GrammarPolice \
           -configuration Release \
-          -archivePath build/GrammarPolice.xcarchive \
-          archive
+          -destination 'platform=macOS,arch=arm64' \
+          -derivedDataPath build/DerivedData \
+          CODE_SIGN_IDENTITY="-" \
+          CODE_SIGNING_REQUIRED=NO \
+          CODE_SIGNING_ALLOWED=NO \
+          build
     
-    - name: Export App
+    - name: Create App Bundle
       run: |
-        xcodebuild -exportArchive \
-          -archivePath build/GrammarPolice.xcarchive \
-          -exportPath build/export \
-          -exportOptionsPlist ExportOptions.plist
+        mkdir -p build/export
+        cp -R build/DerivedData/Build/Products/Release/GrammarPolice.app build/export/
     
     - name: Create ZIP
       run: |
         cd build/export
         zip -r ../../GrammarPolice.zip GrammarPolice.app
     
+    - name: Upload Artifact
+      uses: actions/upload-artifact@v4
+      with:
+        name: GrammarPolice
+        path: GrammarPolice.zip
+    
     - name: Create Release
+      if: startsWith(github.ref, 'refs/tags/')
       uses: softprops/action-gh-release@v1
       with:
         files: GrammarPolice.zip
         generate_release_notes: true
+        body_path: CHANGELOG.md
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
